Fixed bottome square four bar from being visible in the frame

--- a/world-builder/src/pages/display/Display.css
+++ b/world-builder/src/pages/display/Display.css
@@ -93,7 +93,7 @@ body {
 }
 
 .square-four {
-    top: 95.2vh;
+    top: 96.2vh;
     left: 10.3vw;
     width: 89.7vw;
     height: 4.8vh;
